samples/_failures_safe/1761611254_22c784_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_276ef12b.c: In function ‘main’:
./samples/SAFE/__tmp_276ef12b.c:163:5: error: expected declaration or statement at end of input
  163 |     Token* tokens = NULL;
      |     ^~~~~
